fix btn alignment/add modals/style modals

--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@ img {
 }
 
 body {
-  background-color: #7bb87b;
+  background-color: #7bb87b !important;
 }
 
 .username {
@@ -26,13 +26,44 @@ body {
   justify-content: space-evenly;
   align-items: center;
 }
+.modal-deah {
+  background-color: #ac8cef !important;
+  font-family: cursive;
+}
 
+.modal-mom {
+  background-color: #5fd35f !important;
+  font-family: cursive;
+}
+
+.modal-grammy {
+  background-color: #87cefa !important;
+  font-family: cursive;
+}
 .button-container {
   display: flex;
   justify-content: space-evenly;
 }
 
-.smaller-image {
+.gift {
+  text-align: center;
+  display: grid;
+  grid-template-rows: auto auto;
+  grid-row-gap: 1em;
+}
+
+.gift button {
+  background-color: #b32533;
+  color: aliceblue;
+  border: none;
+  padding: 0.25em 0.5em;
+  border-radius: 0.5em;
+  font-family: cursive;
+  font-size: 2.4em;
+  box-shadow: 4px 3px 13px #4e4343;
+}
+
+.gift-image {
   height: 14em;
   width: auto;
 }
